themes/netnate_theme/assets/css/main.css
/*
color theme: https://github.com/rebelot/kanagawa.nvim
stole some css from: https://github.com/nathan-barry/nathan.rs/blob/main/static/css/styles.css
*/

/* color palette */

:root {
    --p-rosewater: #f5e0dc;
    --p-flamingo:  #f2cdcd;
    --p-pink:      #f5c2e7;
    --p-mauve:     #cba6f7;
    --p-red:       #f38ba8;
    --p-maroon:    #eba0ac;
    --p-peach:     #fab387;
    --p-yellow:    #f9e2af;
    --p-green:     #a6e3a1;
    --p-teal:      #94e2d5;
    --p-sky:       #89dceb;
    --p-sapphire:  #74c7ec;
    --p-blue:      #89b4fa;
    --p-lavender:  #b4befe;
    --p-text:      #cdd6f4;
    --p-subtext:   #bac2de;
    --p-overlay:   #6c7086;
    --p-surface:   #313244;
    --p-base:      #1e1e2e;
    --p-crust:     #11111b;
}

/* body */

body {
    background-color: var(--p-crust);
    color: var(--p-text);
    font-family: sans-serif;
    margin: 2rem auto;
    padding: 2rem 1.25rem;
    line-height: 1.5;
    max-width: 56vw;
    min-height: 80vh;
}

/* paragraphs */

p {
    text-align: justify;
    hyphens: auto;
}

/* headings */

h1 {
    color: var(--p-mauve);
}

h1 a {
    color: var(--p-mauve);
    text-decoration: none;
}

h2 {
    color: var(--p-pink);
}

h2 a {
    color: var(--p-pink);
    text-decoration: none;
}

h3 {
    color: var(--p-flamingo);
}

h3 a {
    color: var(--p-flamingo);
    text-decoration: none;
}

h4 {
    color: var(--p-rosewater);
}

h4 a {
    color: var(--p-rosewater);
    text-decoration: none;
}

/* links */

a {
    color: var(--p-teal);
    text-decoration-style: dotted;
}

a:hover {
    color: var(--p-red);
}

/* header */

header {
    display: flex;
    border-bottom: 1px dashed var(--p-text);
    margin-bottom: 1rem;
}

header nav {
    margin-left: auto;
    margin-top: auto;
}

nav ul {
    display: inline-flex;
    list-style: none;
}

header nav ul li {
    margin-inline: 1rem;
}

/* metadata */

summary {
    font-style: italic;
    margin-bottom: 1rem;
}

time {
    border-left: 0.5rem solid var(--p-lavender);
    padding-left: 1rem;
    color: var(--p-lavender);
}

/* tables */

table {
    display: block;
    overflow-x: auto;
    max-width: fit-content;
    border-collapse: collapse;
    margin: auto;
    border-top: 0.2rem solid var(--p-subtext);
    border-bottom: 0.2rem solid var(--p-subtext);
}

th,
td {
    text-align: left;
    padding: 0.5rem;
}

table > tbody > tr:first-child > td,
table > tbody > tr:first-child > th {
  border-top: 0.1rem solid var(--p-overlay);
}

/* code */

code,
pre,
kbd {
  font-family: Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New',
    monospace;
  font-size: 85%;
  color: var(--p-subtext);
}

p code,
li code,
ul code,
table code,
.notice code {
    background-color: var(--p-base);
    padding: 0.2rem 0.4rem;
    border-radius: 4px;
}

pre {
  padding: 1rem 1.5rem;
  max-width: 100%;
  overflow: auto;
  border-radius: 4px;
}

pre code {
  font-size: 95%;
  position: relative;
}

/* tags */

.tags {
    padding-top: 2rem;
}

/* footer */

footer {
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-top: 1px dashed var(--p-text);
    margin-top: 1rem;
}

footer nav ul {
    padding-left: 0;
}

/* blockquotes */

blockquote {
    border-left: 0.5rem solid var(--p-overlay);
    padding-left: 1rem;
    color: var(--p-subtext);
}

blockquote p {
    margin-bottom: 0rem;
}

blockquote ul {
    margin-bottom: 0rem;
}

/* notices */

.notice {
    background-color: var(--p-surface);
    padding: 0.5rem 1rem;
    color: var(--p-text);
}

.notice-icon {
    width: 1rem;
    height: 1rem;
    margin-right: 0.5em;
}

.notice-title {
    display: flex;
    align-items: center;
    margin-bottom: 1rem;
}

/* sidenotes */

.sidenote {
    float: right;
    clear: right;
    width: 18vw;
    margin-right: -20vw;
    margin-bottom: 1em;
}

.sidenote-number::after,
.sidenote::before {
    position: relative;
    vertical-align: baseline;
}

.sidenote-number::after {
    content: '\2020';
    font-size: 0.7rem;
    top: -0.5rem;
    left: -0.2rem;
}

.sidenote::before {
    content: '\2020';
    top: -0.5rem;
}

/* table of contents */

.toc ul {
    list-style: disc;
    display: block;
}

.toc a {
    color: var(--p-subtext);
    text-decoration: none;
}

.toc a:hover {
    color: var(--p-red);
}

/* side elements on medium screens */

@media (max-width: 1050px) {
    .sidenote {
        /* FIXME: bug when sidenotes are placed before blockquotes */
        /* TODO: bump sidenote to end of paragraph when reference is in the middle of a paragraph */
        text-align: center;
        width: 100%;
        margin: 1rem 0;
        padding-bottom: 1rem;
    }
}

@media (min-width: 1050px) {
    .toc {
        float: left;
        clear: left;
        width: 18vw;
        margin-left: -20vw;
        position: sticky;
        top: 20px;
    }
}

/* small screens */

@media (max-width: 780px) {
    body {
        max-width: 100ch;
    }
}

